--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,27 @@
 .App{
   height: 100vh;
   display: flex;
+  background: aliceblue;
+    color: #1f3972;
   /*flex: 1 1 1;*/
 }
 .navigation-menu{
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 30%;
+  width: 400px;
   background: cornflowerblue;
   overflow-y: scroll;
+    margin-right: 15px;
 }
 a, a:active, a:hover, a:visited{
   color: aliceblue;
   text-decoration: none;
   padding: 15px 0;
+}
+
+.cells{
+  width: 80px;
+  height: 80px;
+  border: 2px solid lightgray;
 }
